# Observal

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SETUP.md  development-plan.md  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json
.pi/: AGENTS.md
docker/: Dockerfile.api  docker-compose.yml  entrypoint.sh  migrate.py
docs/: ARCHITECTURE.md  README.md  SUMMARY.md  alpha-wave-plan.md  eval.md  full-observability-plan.md  kiro-setup.md
observal-server/: config.py  logging_config.py  main.py  pyproject.toml  worker.py
observal-web/: package-lock.json  package.json
observal_cli/: client.py  cmd_agent.py  cmd_auth.py  cmd_cursor_sync.py  cmd_doctor.py  cmd_hook.py  cmd_mcp.py  cmd_migrate.py  cmd_ops.py  cmd_pull.py  cmd_reconcile.py  cmd_reconcile_cli.py  cmd_scan.py  cmd_skill.py  cmd_support.py  cmd_tail_flush.py  config.py  hooks_spec.py  ide_registry.py  main.py  proxy.py  render.py  sandbox_runner.py  shim.py
scripts/: gen_synthetic_traces.py  generate_vex.py
tests/: sim_retention_logic.py  test_agent_builder_skills.py  test_agent_composition.py  test_agent_config_generator.py  test_agent_list_visibility.py  test_agent_snapshot.py  test_alert_evaluator.py  test_antigravity_adapter.py  test_audit2_pr2_score_integrity.py  test_audit2_pr3_privacy_enforcement.py  test_audit2_pr3_retention_split.py  test_audit2_pr3_session_redaction.py  test_audit2_pr3_telemetry_redaction.py  test_audit2_tenant_scope.py  test_audit_logging.py  test_auth2_security.py  test_auth_redis_down.py  test_candidate_writer.py  (+78 more)
(+447 files in other folders)
