[project]
name = "observal-cli"
version = "0.1.0"
description = "Observal MCP Server Registry CLI"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "httpx",
    "rich",
]

[project.scripts]
observal = "observal_cli.main:app"
observal-shim = "observal_cli.shim:main"
observal-proxy = "observal_cli.proxy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
